fixed overlaps on deploy

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -70,7 +70,7 @@ height: 100%;
 
 ul{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5rem!important;
+  font-size: 1.2rem!important;
   line-height: 56px!important;
   padding: 23px;
   color: darkslategray;
@@ -191,7 +191,7 @@ margin-top: 1em;
 .name {
   font-family: 'Barlow', sans-serif;
   font-weight: bolder;
-  font-size: 4rem;
+  font-size: 1.7rem;
   margin-top: 2rem;
   line-height: 44px;
 }
